package com.kailash.tutorial.swing.ch28.gui;

import java.util.EventListener;

/**
 * Created by kailash on 3/30/20.
 */
public interface FormListener extends EventListener {
    void formEventOccurred(FormEvent e);
}
