package com.kailash.tutorial.swing.ch28.gui;

public interface PersonTableListener {
    void rowDeleted(int row);
}
