package com.kailash.tutorial.swing.ch28.gui;

public interface StringListener {
    void textEmitted(String text);
}
